Change gmx order for gorder and add tpr from MDDB

--- a/biobb_wf_mem/notebooks/biobb_wf_mem.ipynb
+++ b/biobb_wf_mem/notebooks/biobb_wf_mem.ipynb
@@ -7,7 +7,7 @@
     "# Protein-Membrane MD Analysis tutorial using BioExcel Building Blocks (biobb)\n",
     "\n",
     "***\n",
-    "This tutorial aims to illustrate the process of **analyzing a membrane molecular dynamics (MD) simulation** using the **BioExcel Building Blocks library (biobb)**. The particular example used is the heteropentameric ligand-gated chloride channel gated by gamma-aminobutyric acid (**GABA**), a major inhibitory neurotransmitter in the brain, which was embedded in a **DPPC membrane** in the [MemProtMD](https://memprotmd.bioch.ox.ac.uk/_ref/PDB/4cof/_sim/4cof_default_dppc/) project, which trajectory is obtained from the [**MDDB**](https://mddbr.eu/), where we can find it under the [A01M6](https://irb.mddbr.eu/#/id/A01M6/overview) accession id.\n",
+    "This tutorial aims to illustrate the process of **analyzing a membrane molecular dynamics (MD) simulation** using the **BioExcel Building Blocks library (biobb)**. The particular example used is the heteropentameric ligand-gated chloride channel gated by gamma-aminobutyric acid (**GABA**), a major inhibitory neurotransmitter in the brain, which was embedded in a **DPPC membrane** in the [MemProtMD](https://memprotmd.bioch.ox.ac.uk/_ref/PDB/6i53/_sim/6i53_default_dppc/) project, which trajectory is obtained from the [**MDDB**](https://mddbr.eu/), where we can find it under the [A023K](https://irb-dev.mddbr.eu/#/id/A023K/overview) accession id.\n",
     "***\n",
     "\n",
     "## Settings\n",
@@ -68,7 +68,7 @@
    "metadata": {},
    "source": [
     "**Input parameters** needed:\n",
-    " - **MD_id**: MDDB id of the protein trajectory (e.g. [A01M6](https://mmb-dev.mddbr.eu/#/id/A01M6/overview)).\n",
+    " - **MD_id**: MDDB id of the protein trajectory (e.g. [A023K](https://irb-dev.mddbr.eu/#/id/A023K/overview).\n",
     "- **steps**: number of frames to skip during analysis.\n",
     " - **lipid_sel**: a [MDAnalysis selection](https://docs.mdanalysis.org/stable/documentation_pages/selections.html) of the membrane headgroups on the topology.\n",
     " - **ngl_sel**: and **ngl_hd_sel**: [NGLView](http://nglviewer.org/ngl/api/manual/selection-language.html) selection to visualize the membrane.\n",
@@ -91,32 +91,41 @@
     "from plotly.subplots import make_subplots\n",
     "import matplotlib.pyplot as plt\n",
     "from ipywidgets import HBox\n",
+    "from biobb_common import biobb_global_properties\n",
+    "# Set BioBB global properties\n",
+    "biobb_global_properties['can_write_file_log'] = False\n",
+    "biobb_global_properties['disable_logs'] = False\n",
     "\n",
-    "MD_id = 'A01M6'\n",
-    "# MD_id = 'A023U'\n",
-    "#MD_id = 'A023W'\n",
-    "#MD_id = 'A023P'\n",
-    "#MD_id = 'A023R'\n",
-    "#steps = 1500 # zpositions tarda nada, pero hole tarda bastante. Considerar poner dos variables: step_z, step_hole.\n",
+    "# All the inputs and outputs variables are also defined in the variables.py file\n",
+    "# in case you want to restart the notebook from another point\n",
+    "from variables import *\n",
+    "\n",
+    "MD_id = 'A023K'\n",
+    "#MD_id = 'A01IP'\n",
     "steps = 1\n",
-    "lipid_sel = '(resname DPPC and element P)'\n",
-    "ngl_sel = 'DPPC'\n",
-    "cpptraj_sel = 'DPP'\n",
-    "ngl_hd_sel = f'{ngl_sel} and _P'\n",
+    "if MD_id == 'A023K':\n",
+    "    lipid_sel = '(resname DPPC and element P)'\n",
+    "    ngl_sel = 'DPPC'\n",
+    "    cpptraj_sel = 'DPP'\n",
+    "    ngl_hd_sel = f'{ngl_sel} and _P'\n",
+    "    frames = '1:-1:1000'\n",
+    "elif MD_id == 'A01IP':\n",
+    "    lipid_sel = '(resname POPC and element P)'\n",
+    "    ngl_sel = 'POPC'\n",
+    "    cpptraj_sel = 'POP'\n",
+    "    ngl_hd_sel = f'{ngl_sel} and _P'\n",
+    "    frames = '1:-1:4000'\n",
     "\n",
     "# Common arguments for all the components\n",
     "input_top_path = f'data/{MD_id}.pdb'\n",
-    "input_traj_path = f'data/{MD_id}.xtc'\n",
-    "\n",
-    "# If you want to disable the logs, set this variable to True    \n",
-    "disable_logs = True"
+    "input_traj_path = f'data/{MD_id}.xtc'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the **lipid_sel**, we not only choose the residues with name **DPPC**, but also the element **P**, as this is the most charged one. Selecting only the **headgroups** make easier for the algorithms to separate the components of the **membrane**. \n",
+    "For the **lipid_sel**, we only choose the element **P** of the residues with name **DPPC**, as this is the most charged one. Selecting only the **headgroups** make easier for the algorithms to separate the components of the **membrane**. \n",
     "\n",
     "<div style=\"text-align: center;\">\n",
     "    <img src=\"img/DPPC.png\" alt=\"DPPC\" width=\"800\"/>\n",
@@ -155,13 +164,13 @@
     "for folder in ['out', 'data']:\n",
     "    if not os.path.exists(folder):\n",
     "        os.makedirs(folder)\n",
-    "        print(f\"Created folder: {folder}\")\n",
     "\n",
     "# Check if PDB and XTC files already exist\n",
     "pdb = f\"data/{MD_id}_10.pdb\"\n",
     "xtc = f\"data/{MD_id}_10.xtc\"\n",
+    "tpr = f\"data/{MD_id}.tpr\"\n",
     "if not os.path.exists(pdb) or not os.path.exists(xtc):\n",
-    "    \n",
+    "\n",
     "    # Download trajectory\n",
     "    # Import module\n",
     "    from biobb_io.api.mddb import mddb\n",
@@ -171,8 +180,8 @@
     "        'node_id' : 'irb-dev',\n",
     "        'project_id': MD_id,\n",
     "        'trj_format': 'xtc',\n",
-    "        #'frames' : '1:-1:10'\n",
-    "        'frames' : '1:-1:100'\n",
+    "        'frames' : frames,\n",
+    "        'extra_files': [('topology.tpr',tpr)]\n",
     "    }\n",
     "\n",
     "    # Create and launch bb\n",
@@ -268,7 +277,7 @@
     "from biobb_analysis.gromacs.gmx_image import gmx_image\n",
     "\n",
     "# Create properties dict and inputs/outputs\n",
-    "memb_fit = 'data/fit.xtc'\n",
+    "memb_fit = f'data/{MD_id}_fit.xtc'\n",
     "\n",
     "prop = {\n",
     "    'fit_selection': 'DPPC',\n",
@@ -279,9 +288,9 @@
     "\n",
     "# Create and launch bb\n",
     "gmx_image(input_traj_path=xtc,\n",
-    "            input_top_path=pdb,\n",
-    "            output_traj_path=memb_fit,\n",
-    "            properties=prop)"
+    "          input_top_path=pdb,\n",
+    "          output_traj_path=memb_fit,\n",
+    "          properties=prop)"
    ]
   },
   {
@@ -294,7 +303,7 @@
    "source": [
     "# We fit again transxy to the protein so it does not shake due to lipids going through the pbc\n",
     "\n",
-    "memb_fit_xy = 'data/fit2.xtc'\n",
+    "memb_fit_xy = f'data/{MD_id}_fit2.xtc'\n",
     "\n",
     "# Create properties dict and inputs/outputs\n",
     "prop = {\n",
@@ -460,7 +469,6 @@
     "    'lipid_sel': lipid_sel,\n",
     "    #'steps': 10,\n",
     "    'steps': steps,\n",
-    "    #'disable_logs': disable_logs\n",
     "}\n",
     "\n",
     "# Create and launch bb\n",
@@ -564,8 +572,7 @@
     "    #'steps': 1,\n",
     "    'steps': steps,\n",
     "    'height_sel': lipid_sel,\n",
-    "    'ignore_no_box': True,\n",
-    "    'disable_logs': disable_logs\n",
+    "    'ignore_no_box': True\n",
     "}\n",
     "\n",
     "# Create and launch bb\n",
@@ -589,8 +596,7 @@
     "    #'steps': 1,\n",
     "    'steps': steps,\n",
     "    'height_sel': f'{lipid_sel} and {around_sel}',\n",
-    "    'ignore_no_box': True,\n",
-    "    'disable_logs': disable_logs\n",
+    "    'ignore_no_box': True\n",
     "}\n",
     "\n",
     "# Create and launch bb\n",
@@ -739,11 +745,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculating deuterium order parameter of acyl tails in a lipid bilayer using [gmx order](https://manual.gromacs.org/current/onlinehelp/gmx-order.html). <br>\n",
-    "This tool only works for saturated carbons and united atom force fields\n",
+    "Calculating deuterium order parameter of acyl tails in a lipid bilayer using [gorder](https://github.com/Ladme/gorder). <br>\n",
     "***\n",
     "**Building Blocks** used:\n",
-    " - [GMXOrder](https://biobb-mem.readthedocs.io/en/latest/gromacs.html#module-gromacs.gmx_order) from **from biobb_mem.gromacs.gmx_order**\n",
+    " - [GOrderAA](https://biobb-mem.readthedocs.io/en/latest/gorder.html#module-gorder.gorder_aa) from **from biobb_mem.gorder.gorder_aa**\n",
     "***"
    ]
   },
@@ -753,81 +758,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: meter en biobb_io.mddb\n",
-    "\n",
-    "input_tpr_path = f'data/{MD_id}.tpr'\n",
-    "import requests\n",
-    "if not os.path.exists(input_tpr_path): \n",
-    "    # Download TPR\n",
-    "    headers = {'accept': 'application/octet-stream'}\n",
-    "    url = f'https://irb.mddbr.eu/api/rest/v1/projects/{MD_id}/files/topology.tpr'\n",
-    "    response = requests.get(url, headers=headers)\n",
-    "    if response.status_code == 200:\n",
-    "        tpr_content = response.content\n",
-    "        with open(input_tpr_path, 'wb') as tpr_file:\n",
-    "            tpr_file.write(tpr_content)\n",
-    "        print(f\"Saved TPR file\")\n",
-    "    else:\n",
-    "        print(f\"Error for the TPR file: {response.status_code}\")\n",
-    "\n",
-    "# Al usar 10 frames de la trayectoria el API use la conversión de bin a xtc \n",
-    "# donde se pierde información de las dimensiones de la box y muchos analisis de\n",
-    "# membrana fallan. Hay que descargar la trajectoria completa, que esta usa el\n",
-    "# xtc original donde si están las dimensiones de la caja\n",
-    "\n",
-    "if not os.path.exists(input_traj_path): \n",
-    "    # Download XTC\n",
-    "    headers2 = {'accept': 'application/octet-stream'}\n",
-    "    url2= f'https://irb.mddbr.eu/api/rest/v1/projects/{MD_id}/files/trajectory.xtc'\n",
-    "    response2 = requests.get(url2, headers=headers2)\n",
-    "    if response2.status_code == 200:\n",
-    "        xtc_content = response2.content\n",
-    "        with open(input_traj_path, 'wb') as xtc_file:\n",
-    "            xtc_file.write(xtc_content)\n",
-    "        print(f\"Saved XTC file\")\n",
-    "    else:\n",
-    "        print(f\"Error for the XTC file: {response2.status_code}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with mda.selections.gromacs.SelectionWriter('data/sn1.ndx', mode='w') as ndx:\n",
-    "        for i in range(15,32):\n",
-    "            if i==16: continue\n",
-    "            ndx.write(u.select_atoms(f'resname DPPC and name C{i}'), name=f'C{i}')\n",
-    "\n",
-    "with mda.selections.gromacs.SelectionWriter('data/sn2.ndx', mode='w') as ndx:\n",
-    "    for i in range(34,51):\n",
-    "        if i==35: continue\n",
-    "        ndx.write(u.select_atoms(f'resname DPPC and name C{i}'), name=f'C{i}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from biobb_mem.gromacs.gmx_order import gmx_order\n",
+    "from biobb_mem.gorder.gorder_aa import gorder_aa\n",
     "\n",
     "prop = {\n",
-    "    'd':'z',\n",
+    "    'handle_pbc': False\n",
     "}\n",
     "\n",
-    "gmx_order(input_top_path=input_tpr_path,\n",
-    "          input_traj_path=memb_fit,\n",
-    "          input_index_path='data/sn1.ndx',\n",
-    "          output_deuter_path='out/deuter_sn1.xvg',\n",
-    "          properties=prop)\n",
-    "\n",
-    "gmx_order(input_top_path=input_tpr_path,\n",
-    "          input_traj_path=memb_fit,\n",
-    "          input_index_path='data/sn2.ndx',\n",
-    "          output_deuter_path='out/deuter_sn2.xvg',\n",
+    "gorder_aa(input_top_path=tpr,\n",
+    "          input_traj_path=xtc,\n",
+    "          output_order_path='out/order.csv',\n",
     "          properties=prop)"
    ]
   },
@@ -837,24 +776,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read the XVG file\n",
-    "data = np.loadtxt('out/deuter_sn1.xvg', comments=['@', '#'])\n",
-    "data2 = np.loadtxt('out/deuter_sn2.xvg', comments=['@', '#'])\n",
+    "# Read and process the order parameter data\n",
+    "df_order = pd.read_csv('out/order.csv')\n",
     "\n",
-    "# Plot the data\n",
-    "plt.figure(figsize=(10, 4))\n",
-    "plt.plot(data[:, 0]+1, data[:, 1])\n",
-    "plt.plot(data2[:, 0]+1, data2[:, 1])\n",
-    "plt.xlabel('C'); plt.ylabel('SCC')\n",
-    "plt.title('Deuterium Order Parameters')\n",
+    "# Separate data for sn-1 (C2X) and sn-2 (C3X) chains\n",
+    "# Separate data for sn-1 (C2X) and sn-2 (C3X) chains\n",
+    "sn1_data = df_order[df_order['atom'].str.startswith('C2')].copy().reset_index()\n",
+    "sn2_data = df_order[df_order['atom'].str.startswith('C3')].copy().reset_index()\n",
     "\n",
-    "# It is not possible to compute -SCD for terminal carbon atoms, \n",
-    "# as they lack neighboring atoms from which the local molecular \n",
-    "# axis is computed\n",
-    "plt.ylim(0,.4); plt.xlim(2,15)\n",
-    "plt.xticks(range(2,16))\n",
-    "plt.legend(['sn1','sn2'])\n",
-    "plt.grid(True); plt.show()"
+    "fig, ax = plt.subplots(figsize=(8,6))\n",
+    "ax.plot(sn1_data['total'], marker='o', label='sn-1 (C2X)', color='blue')\n",
+    "ax.plot(sn2_data['total'], marker='s', label='sn-2 (C3X)', color='orange')\n",
+    "ax.set_xlabel('Carbon Position')\n",
+    "ax.set_ylabel('Order Parameter (-SCD)')\n",
+    "ax.set_title('DPPC Deuterium Order Parameters - Both Acyl Chains')\n",
+    "ax.grid(True, linestyle='--', alpha=0.5)\n",
+    "ax.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -1022,10 +961,7 @@
     "prop = {\n",
     "    'mask': cpptraj_mask,\n",
     "    #'steps': 1,\n",
-    "    'steps': steps,\n",
-    "    'disable_logs': disable_logs,\n",
-    "    'remove_tmp': False\n",
-    "    \n",
+    "    'steps': steps\n",
     "}\n",
     "\n",
     "# Create and launch bb\n",
@@ -1128,14 +1064,14 @@
     "prop = {\n",
     "    'select': 'protein',\n",
     "    #'steps': steps,\n",
-    "    'steps': 10,\n",
+    "    'steps': 20,\n",
     "    'sample': 0.1,\n",
     "}\n",
     "\n",
     "# Create and launch bb\n",
     "mda_hole(input_top_path=pdb,\n",
-    "         #input_traj_path=memb_fit_xy,\n",
-    "         input_traj_path=xtc,\n",
+    "         input_traj_path=memb_fit_xy,\n",
+    "         #input_traj_path=xtc,\n",
     "         output_hole_path='out/hole.vmd',\n",
     "         output_csv_path='out/hole_profile.csv',\n",
     "         properties=prop)"
@@ -1190,9 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from biobb_mem.mdanalysis_biobb.mda_hole import display_hole\n",
@@ -1234,8 +1168,7 @@
     "    'lipid_sel': lipid_sel,\n",
     "    #'steps': 10,\n",
     "    'steps': steps,\n",
-    "    'frame_cutoff': 2,\n",
-    "    'disable_logs': True\n",
+    "    'frame_cutoff': 2\n",
     "}\n",
     "\n",
     "# Create and launch bb\n",
@@ -1272,7 +1205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "biobb_all",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1286,7 +1219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
