--- a/biobb_wf_mem/notebooks/biobb_wf_mem.ipynb
+++ b/biobb_wf_mem/notebooks/biobb_wf_mem.ipynb
@@ -59,6 +59,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Initializing colab\n",
+    "The three cells below are used only in case this notebook is executed via **Google Colab**. Take into account that, for running conda on **Google Colab**, the **condacolab** library must be installed. As [explained here](https://pypi.org/project/condacolab/), the installation requires a **kernel restart**, so when running this notebook in **Google Colab**, don't run all cells until this **installation** is properly **finished** and the **kernel** has **restarted**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Only executed when using google colab\n",
+    "import sys\n",
+    "if 'google.colab' in sys.modules:\n",
+    "  !git clone https://github.com/bioexcel/biobb_wf_mem.git\n",
+    "  !pip install -q condacolab\n",
+    "  import condacolab\n",
+    "  condacolab.install()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'google.colab' in sys.modules: \n",
+    "  # Install conda environment\n",
+    "  !mamba env update -n base -f biobb_wf_mem/conda_env/environment.yml\n",
+    "  # Fix Python path to prioritize conda packages\n",
+    "  conda_path = '/usr/local'\n",
+    "  sys.path.insert(0, f'{conda_path}/lib/python3.11/site-packages')\n",
+    "  # Enable widgets for colab\n",
+    "  from google.colab import output \n",
+    "  output.enable_custom_widget_manager() \n",
+    "  # Change working dir\n",
+    "  import os \n",
+    "  os.chdir(\"biobb_wf_mem/biobb_wf_mem/notebooks\") \n",
+    "  print(f\"New working directory: {os.getcwd()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store original Colab paths\n",
+    "ORIGINAL_PATHS = [p for p in sys.path if '/usr/local/lib/python3.12' in p or 'dist-packages' in p]\n",
+    "CONDA_PATHS = [p for p in sys.path if '/usr/local/lib/python3.11' in p]\n",
+    "\n",
+    "def use_colab_plotly():\n",
+    "    \"\"\"Switch to Colab's original plotly\"\"\"\n",
+    "    # Move Colab paths to the front\n",
+    "    for path in reversed(ORIGINAL_PATHS):\n",
+    "        if path in sys.path:\n",
+    "            sys.path.remove(path)\n",
+    "        sys.path.insert(0, path)\n",
+    "    \n",
+    "    # Reload plotly and nbformat from Colab's environment\n",
+    "    if 'plotly' in sys.modules:\n",
+    "        del sys.modules['plotly']\n",
+    "        del sys.modules['plotly.graph_objs']\n",
+    "        # Delete all plotly submodules\n",
+    "        to_delete = [m for m in sys.modules if m.startswith('plotly')]\n",
+    "        for m in to_delete:\n",
+    "            del sys.modules[m]\n",
+    "    if 'nbformat' in sys.modules:\n",
+    "        del sys.modules['nbformat']\n",
+    "\n",
+    "def use_conda_env():\n",
+    "    \"\"\"Switch back to conda environment\"\"\"\n",
+    "    # Move conda paths to the front\n",
+    "    for path in reversed(CONDA_PATHS):\n",
+    "        if path in sys.path:\n",
+    "            sys.path.remove(path)\n",
+    "        sys.path.insert(0, path)\n",
+    "    \n",
+    "    # Clean up Colab's plotly/nbformat so conda versions load next time\n",
+    "    if 'plotly' in sys.modules:\n",
+    "        to_delete = [m for m in sys.modules if m.startswith('plotly')]\n",
+    "        for m in to_delete:\n",
+    "            del sys.modules[m]\n",
+    "    if 'nbformat' in sys.modules:\n",
+    "        del sys.modules['nbformat']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"input\"></a>\n",
     "## Input parameters"
    ]
