--- a/biobb_wf_mem/notebooks/biobb_wf_mem.ipynb
+++ b/biobb_wf_mem/notebooks/biobb_wf_mem.ipynb
@@ -57,7 +57,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Initializing colab\n",
     "The three cells below are used only in case this notebook is executed via **Google Colab**. Take into account that, for running conda on **Google Colab**, the **condacolab** library must be installed. As [explained here](https://pypi.org/project/condacolab/), the installation requires a **kernel restart**, so when running this notebook in **Google Colab**, don't run all cells until this **installation** is properly **finished** and the **kernel** has **restarted**."
@@ -900,7 +902,7 @@
    "metadata": {},
    "source": [
     "Area per lipid via a 2D Voronoi tessellation.<br>\n",
-    "While diving the space for the lipids we remove the area correspoding to protein molecules.\n",
+    "While diving the space for the lipids we remove the area corresponding to protein molecules.\n",
     "***\n",
     "**Building Blocks** used:\n",
     " - [FatslimAPL](https://biobb-mem.readthedocs.io/en/latest/fatslim.html#module-fatslim.fatslim_apl) from **biobb_mem.fatslim.fatslim_apl**\n",
